Introduce `AlgorithmRegistry` and refactor `Algorithm` model (#31)